2019-1/231/users/4339/executions/1678_2971.log
== TEST (2019-04-16 18:32:43) 
-- CODE:
Q=1500
t=36
j=input("qual o valor da taxa?")
valorap=input("qual o valor do ap?")
Qf=Q*(1+j)**t
if(valor>=Q):
	print(round(Qf,2))
	print("Nao")

else:
	print(Qf)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Qf=Q*(1+j)**t
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:33:52) 
-- CODE:
Q=1500
t=36
j=flaot(input("qual o valor da taxa?"))
valorap= float(input("qual o valor do ap?"))
Qf= Q*(1+j)**t
if(valor>=Q):
	print(round(Qf,2))
	print("Nao")

else:
	print(Qf)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    j=flaot(input())
NameError: name 'flaot' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:34:07) 
-- CODE:
Q=1500
t=36
j= float(input("qual o valor da taxa?"))
valorap= float(input("qual o valor do ap?"))
Qf= Q*(1+j)**t
if(valor>=Q):
	print(round(Qf,2))
	print("Nao")

else:
	print(Qf)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(valor>=Q):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:34:58) 
-- CODE:
Q=1500
t=36
j= float(input("qual o valor da taxa?"))
valorap= float(input("qual o valor do ap?"))
Qf= Q*(1+j)**t
if(valorap >=Qf):
	print(round(Qf,2))
	print("Nao")

else:
	print(Qf)

-- OUTPUT:
14365502.75713173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:01) 
-- CODE:
Q=1500
t=36
j= float(input("qual o valor da taxa?"))
valorap= float(input("qual o valor do ap?"))
Qf= Q*(1+j)**t
if(valorap >=Qf):
	print(round(Qf,2))
	print("Nao")

else:
	print(Qf)
	print(Sim)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(Sim)
NameError: name 'Sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:24) 
-- CODE:
Q=1500
t=36
j= float(input("qual o valor da taxa?"))
valorap= float(input("qual o valor do ap?"))
Qf= Q*(1+j)**t
if(valorap >=Qf):
	print(round(Qf,2))
	print("Nao")

else:
	print(Qf)
	print("Sim")

-- OUTPUT:
14365502.75713173
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:51) 
-- CODE:
Q=1500
t=36
j= float(input("qual o valor da taxa?"))
valorap= float(input("qual o valor do ap?"))
Qf= Q*(1+j)**t
if(valorap >=Qf):
	print(round(Qf,2))
	print("Nao")

else:
	print(round(Qf,2))
	print("Sim")

-- OUTPUT:
14365502.76
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:37:04) 
-- CODE:
Q=1500
t=36
j= float(input("qual o valor da taxa?"))
valorap= float(input("qual o valor do ap?"))
Qf= Q*(1+j)**t
if(valorap >=Qf):
	print(round(Qf,2))
	print("Nao")

else:
	print(round(Qf,2))
	print("Sim")

-- OUTPUT:
14365502.76
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:37:06) 
-- CODE:
Q=1500
t=36
j= float(input("qual o valor da taxa?"))
valorap= float(input("qual o valor do ap?"))
Qf= Q*(1+j)**t
if(valorap >=Qf):
	print(round(Qf,2))
	print("Nao")

else:
	print(round(Qf,2))
	print("Sim")

-- EXECUTION TIME:
0.139269
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76
Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727.78
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81
Sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
